# my-dou

./: .coverage  .env  .gitignore  GEMINI.md  README.md  explore_api.py  inlabs_client.py  inlabs_login.py  main.py  pyproject.toml  repomix-output.xml  xml_processor.py
.gemini/: settings.json
.omc/: project-memory.json
.omc/sessions/: 181753f0-9885-4b98-a9c7-b69fbb5993b6.json  d7ef0701-eb75-4e44-985d-b45f97091627.json
.omc/state/: hud-state.json  hud-stdin-cache.json
.omc/state/checkpoints/: checkpoint-2026-04-08T16-17-23-678Z.json  checkpoint-2026-04-08T16-20-07-241Z.json
.omc/state/sessions/181753f0-9885-4b98-a9c7-b69fbb5993b6/: ralplan-state.json
tests/: test_inlabs_client.py  test_xml_processor.py
tests/fixtures/: dates.html  files.html
